fix: Fix broken image and logo alignment, add box-shadow to multiple elements

--- a/style.css
+++ b/style.css
@@ -13,28 +13,10 @@ a {
   font-weight: 700;
 }
 
-img {
-  height: 100vh;
-}
-
-.createAcc {
-  background-color: #2c5945;
-  color: #fff;
-  border: none;
-  border-radius: 6px;
-  padding: 20px 48px;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-.createAcc:hover {
-  background-color: #3a745a;
-}
-
 label {
   font-size: 18px;
-  font-weight: 600;
-  color: #000000bc;
+  font-weight: 700;
+  color: #00000090;
 }
 
 input {
@@ -47,7 +29,7 @@ input {
 }
 
 input:focus {
-  border: 2px solid #2172c4;
+  border: 2px solid #2c5945;
 }
 
 .container {
@@ -55,30 +37,36 @@ input:focus {
   flex-direction: row;
 }
 
-.logoMain {
+.bg-img {
+  position: relative;
+  color: #f6f6f6;
+}
+
+.bg-img > img,
+.logo-main {
+  height: 100vh;
+  width: 740px;
+  display: block;
+  margin: auto;
+}
+
+.logo-main {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #00000066;
-  color: #f6f6f6;
   font-family: 'Times New Roman', Times;
   font-size: 160px;
   font-weight: 100;
-  height: 100vh;
-  width: 660px;
-  margin: 0;
   position: absolute;
-}
-
-.bgImg > img {
-  width: 660px;
+  box-shadow: 10px 0px 30px -10px #000000;
 }
 
 .credits {
-  color: #fff;
   position: absolute;
   bottom: 0;
-  padding-left: 153px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .main {
@@ -91,20 +79,21 @@ input:focus {
   font-weight: 600;
 }
 
-.caption {
-  font-size: 28px;
-  font-weight: 700;
-  padding-top: 24px;
-  margin-bottom: -10px;
-}
-
 #form {
   height: 380px;
   width: 100vw;
   padding-left: 64px;
   margin-bottom: -10px;
   background: #fff;
-  box-shadow: 0px 10px 20px 0px #969696;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+}
+
+.caption {
+  font-size: 28px;
+  font-weight: 700;
+  padding-top: 24px;
+  margin-bottom: -10px;
 }
 
 .form-container {
@@ -134,7 +123,25 @@ input:focus {
   margin-bottom: 0px;
 }
 
-.logIn {
+.create-btn {
+  background-color: #397258;
+  color: #fff;
+  border: none;
+  border-radius: 6px;
+  padding: 20px 48px;
+  font-weight: 700;
+  cursor: pointer;
+  box-shadow: #0000002b 0px -23px 25px 0px inset,
+    #00000026 0px -36px 30px 0px inset, #0000001a 0px -79px 40px 0px inset,
+    #0000000f 0px 2px 1px, #00000017 0px 0px 2px, #00000017 0px 0px 4px,
+    #00000017 0px 0px 8px, #00000017 0px 0px 16px;
+}
+
+.create-btn:hover {
+  background-color: #2c5945;
+}
+
+.log-in {
   color: #2c5945;
   font-weight: 700;
   text-decoration: none;
